--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,19 @@
 /* ###################################################### GENERALES ###################################################### */
+
+/*
+FONDO. Gradiente:
+color superior: #FFFFFF
+color inferior: #FFEFBA
+
+TIPOGRAFÍA GENERAL. Uso un gris claro o blanco.
+Gris: rgb(100, 100, 100)
+Blanco: rgb(255, 255, 255)
+
+TIPOGRAFÍA DENTRO DE IMAGENES. Fondo oscurecido 
+*/
+
+
+
 *{
     margin: 0;
     padding: 0;
@@ -6,16 +21,19 @@
 }
 
 body {
-    background-color: rgb(35, 35, 35);
     font-family: 'Oswald', sans-serif;
     
     width: 80%;
     max-width: 1300px;
     margin: 0 auto;
+    background-image: linear-gradient(#FFFFFF, #FFEFBA);
+    /* background: url("./img/fondo.svg") no-repeat; */
+    background-size: cover;
+
 }
 
 p {
-    color:rgb(200, 200, 200);
+    color:rgb(100, 100, 100);
 }
 
 /* ###################################################### HEADER ###################################################### */
@@ -78,17 +96,13 @@ p {
     list-style: none;
     display: none;
 
+    background-color: rgb(207, 21, 42);
 
-    transition: top 10s;
-    
     border: solid 0px black;
 }
 .sub__menu:hover .nav__sublist {
     display: block;
-    top: 50%;
-}
-.nav__item:hover .nav__link {
-    background-color: rgb(207,21,42);
+    top: 100%;
 }
 
 .nav__item {
@@ -96,6 +110,11 @@ p {
     justify-content: center;
 
     border: solid 0px white;
+}
+
+.nav__item:hover .nav__link {
+    color: rgb(255,255,255);
+    background-color: rgb(207, 21, 42);
 }
 
 .nav__sub_item {
@@ -118,16 +137,17 @@ p {
     padding: 5px;
     
     font-family: 'Oswald', sans-serif;
-    color: rgb(200, 200, 200);
-
+    font-style: italic;
+    color: rgb(100, 100, 100);
+    transition: all 0.4s;
     border: solid 0px green;
 }
 
 .nav__select {
     width: 130%;
     padding: 5px;
+    color: rgb(255, 255, 255);
     background-color: rgb(207,21,42);
-    color: rgb(255, 255, 255)
 }
 
 /* ###################################################### FOOTER ###################################################### */
@@ -208,7 +228,7 @@ p {
 /* ###################################################### MAIN INDEX ###################################################### */
 
 .main__promo__section {
-    margin-top: 20px;
+    margin-top: 100px;
     display: grid;
     grid-template-columns: 90% 10%;
     grid-template-rows: auto auto;
@@ -230,8 +250,10 @@ p {
     align-content: center;
 }
 
-.voltear {
-    -webkit-transform: rotate(-90deg);
+.flechas {
+    text-align: center;
+    font-size: 4rem;
+    transition: all 0.3s;
 }
 
 .main_promo_nav_text {
@@ -240,14 +262,19 @@ p {
     border: solid 0px green;
 }
 
+.main__promo__section__button:hover .flechas{
+    opacity: 100%;
+    transform: rotate(360deg);
+}
 .main__promo__section__button:hover {
     opacity: 100%;
+    transform: rotate(360deg);
 }
 
 .promo_zise {
-    margin: 10% 45%;
-    width: 15%;
-    height: 12%;
+    margin: 2% 60%;
+    width: 25%;
+    height: 20%;
 }
 .promo_costo_fondo {
     position: absolute;
@@ -275,9 +302,8 @@ p {
     text-align: center;
 }
 
-
-
 .main__sec__nosotros {
+    margin-top: 200px;
     height: 800px;
     background-color: royalblue;
 }
